--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,8 +73,8 @@ button {
 }
 
 .status-message {
-	margin-bottom: 90px;
-	font-size: 4.5rem;
+	margin-bottom: 50px;
+	font-size: 4rem;
 	font-weight: lighter;
 	span {
 	  font-weight: normal;
@@ -105,8 +105,8 @@ button {
       border-bottom: none;
     }
     .square {
-      width: 300px;
-      height: 300px;
+      width: 10rem;
+      height: 10rem;
       border-right: 5px solid #fff;
       font-size: 5.5rem;
       padding: 0;
